log
Wed 08 May 2024 07:21:20 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
8439d74
Wed 08 May 2024 07:38:55 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
5e4f9d6
Wed 08 May 2024 07:42:20 PM UTC: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
a955cfe
Wed 08 May 2024 07:51:57 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
a2bd4ea
Wed 08 May 2024 07:57:55 PM UTC: 
 treemap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
cf648b0
Sat 11 May 2024 02:14:11 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  20|2
total_score: 45/70
8245989
Sat 11 May 2024 02:17:59 AM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
7836aa1
Sat 11 May 2024 02:23:03 AM UTC: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
c73b0b1
Sat 11 May 2024 02:29:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
7788bfe
Sat 11 May 2024 02:35:57 AM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  26|1
total_score: 60/70
2f00e46
Sat 11 May 2024 02:39:43 AM UTC: 
 treemap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:173:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  173 |     return upper;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
6ad2324
